# rustif

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
rustifterm/: Cargo.toml
rustifterm/src/: client.rs  errors.rs  main.rs
rustifzm/: Cargo.toml
rustifzm/src/: errors.rs  lib.rs  zcpu.rs  zmachine.rs  zmemory.rs  zobjects.rs  zstring.rs
rustifzm/src/zcpu/: instructions.rs  opcodes.rs
rustifzm/src/zmachine/: header.rs  object.rs  string.rs
rustifzm/tests/: harness.rs
