[package]
name = "rustifterm"
version = "0.0.1"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "rustifterm"
path = "src/main.rs"

[dependencies]
rustifzm = { path = "../rustifzm" }
clap = { version = "3.1.8", features = ["derive"] }
failure = "0.1.8"
